fixed text overflowing

--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,7 @@ html{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 25%;
+    min-height: 25%;
     width: 25%;
 }
 
@@ -81,6 +81,7 @@ html{
 #output{
     text-align: center;
     margin-top: 60px;
+    padding-bottom: 10px;
 }
 
 
